--- a/ass2/index.html
+++ b/ass2/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
-h1 {
-    color: purple;
-}
-</style>
+<html lang=en">
+
 
 <head>
   <title>Assignment 2</title>
-
-
+  
 </head>
 
 <body>
 
 <h1>Assignment 2</h1>
 
-Dunno whether the wheather is good or not
+I started working on this assignment an hour before the deadline. I
+don not really have any excuses nor do I wish to make any. I will try to join a
+group for the next assignment and get something done. This is for all intents
+and purposes a blank hand-in. I would appreciate if this was not shared like the
+other assignments, but that is up to you.
 
 </body>
-
+</html>
 
 
 
